Fix delete confirmation by modal

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 :root {
   /* Colors */
-  --primary: #F5222D;
+  --primary: rgb(245, 34, 45);
   --secondary: #D9D9D9;
   --tertiary: #F0F2F5;
   --black: #000000;
